# FastaFrames

./: CHANGELOG.md  README.md  app.py  example.fasta  example.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
examples/: example_streamlit_app.py  make_decoy_fasta.py  tutorial.py
src/fastaframes/: __init__.py  fastaframes.py  util.py
tests/: test_description_parsing.py  test_fastaframes.py
