[build-system]
requires = ["setuptools"]

[project]
name = "fastaframes"
authors = [
    {name = "Patrick Garrett", email = "pgarrett@scripps.edu"},
]
description = "A very simple fasta file parser."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "fastaframes.__version__"}

[tool.pylint]
max-line-length = 120
fail-under = 9.5
good-names = ["db"]
extension-pkg-whitelist='pydantic'
